# TransDetect-Vid

./: .gitignore  HUONG_DAN_CAI_DAT.md  README.md  UI_REQUIREMENTS.md  app.py  app_streamlit.py  main.py  optical_flow.py  pyproject.toml  requirements.txt  run_demo.py  train_yolo.py  yolo_detector.py
datasets/: README.md
datasets/Car Motorcycle Truck.v1i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/Car Motorcycle Truck.v1i.yolov11/test/labels/: All-New-Super-Cub-2020-2_png.rf.2afcc26ab28ff604fec5a905e6c77058.txt  S0537_jpg.rf.067e034191df6328fd2a8178b6d37d88.txt  W-61_webp.rf.2059ee4d38c8592458e14f6e52d142e3.txt  (+1 more)
datasets/Vehicle Detection.v7i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/Vietnam Container truck.v1i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/Vietnam-Traffic-Sign.v1i.yolov11/: README.dataset.txt  README.roboflow.txt
datasets/Vietnam-Traffic-Sign.v1i.yolov11/train/: labels.cache
datasets/Vietnam-Traffic-Sign.v1i.yolov11/valid/: labels.cache
datasets/configs/: example_data.yaml
file_word_BaoCao/: TransDetect-Vid_BaoCao_Gop_v5_BoSungMaNguon (1).docx  TransDetect-Vid_BaoCao_Gop_v5_BoSungMaNguon_Updated.docx  TransDetect-Vid_v5_FINAL_DRAFT.docx  TransDetect-Vid_v5_Updated_CoComment.docx  report.txt
legacy/: README.md  classical_detector.py  preprocessing.py
notebooks/: TransDetect_Vid_Colab_Demo.ipynb
src/transdetect/: __init__.py  classical_detector.py  config.py  optical_flow.py  pipeline.py  preprocessing.py  visualization.py  yolo_detector.py
(+809 files in other folders)
